--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["./js/jquery.js", "./js/command.js", "./js/myscript.js", "./js/popup.js"],
+      "js": ["./js/jquery.js", "./js/config.js", "./js/myscript.js", "./js/popup.js"],
       "run_at": "document_start"
     }
   ],
