--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["./js/jquery.js", "./js/config.js", "./js/myscript.js", "./js/popup.js"],
+      "js": ["./js/jquery-3.3.1.min.js", "./js/config.js", "./js/myscript.js", "./js/popup.js"],
       "run_at": "document_start"
     }
   ],
@@ -26,5 +26,6 @@
   ],
   "icons" : {
     "128": "icon.png"
-  }
+  },
+  "web_accessible_resources": ["*.js", "*.png"]
 }
