--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
   "version": "1.0",
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "pop.html"
+    "default_popup": "popup.html"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["./js/jquery-3.3.1.min.js", "./js/config.js", "./js/myscript.js", "./js/popup.js"],
+      "js": ["./js/jquery-3.3.1.min.js", "./js/config.js", "./js/myscript.js"],
       "run_at": "document_start"
     }
   ],
