--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["./js/jquery-3.3.1.min.js", "./js/config.js", "./js/myscript.js"],
+      "js": ["./js/jquery-3.3.1.min.js", "./js/myscript.js"],
       "run_at": "document_start"
     }
   ],
@@ -22,7 +22,8 @@
     "activeTab",
     "tabs",
     "storage",
-    "history"
+    "history",
+    "<all_urls>"
   ],
   "icons" : {
     "128": "icon.png"
